# Document-management-system

./: .dockerignore  .env.example  .flaskenv  .gitignore  DISCUSSIONS_FEATURE_SUMMARY.md  Dockerfile  Readme.md  WARP.md  admin.py  app.py  app.yaml  automate.py  dev.sh  docker-compose.yml  external_app.py  fast.py  fix_all_summaries.py  mongo-init.js  nnn.py  package-lock.json  pyproject.toml  regenerate_summaries.py  setup.py  setup_env.sh  start_dev.py  third_party_app.py
backend/: RAG.py  __init__.py  blurb.py  compliance_api.py  dataextraction.py  db.py  embeddings.py  extract.py  guardrails.py  ingest_errors.py  main.py  multi_doc_comparison.py  new_extract.py  pdf_utils.py  precedent_finder.py  query_classifier.py  query_errors.py  query_search_validation.py  retrieval.py  search.py  search_init.py  storage.py  users.py
deployment/: DEPLOYMENT_FILES_OVERVIEW.md  GITHUB_ACTIONS_SETUP.md  deploy.sh  gunicorn_start.sh  nginx.conf  setup_ec2.sh  supervisor.conf  test_deployment.sh  update_deploy.sh
docs/: ADVANCED_SEARCH_ARCHITECTURE.md  ALGORITHM_COMPARISON_PRECEDENT_VS_QUERY.md  API_DESIGN_OVERVIEW.md  API_ENDPOINTS_INGESTION_SEARCH.md  API_INTEGRATION_GUIDE.md  ARCHITECTURE_DIAGRAMS.md  AWS_DEPLOYMENT_GUIDE.md  BLURB.md  DEPENDENCY_TROUBLESHOOTING.md  DOCUMENT_COMPARISON_PIPELINE.md  DOCUMENT_INGESTION_PIPELINE.md  EMAIL_SETUP.md  FUTURE_FEATURES.md  GUARDRAILS_AND_UX.md  HYBRID_SEARCH_ENGINE_DETAILED.md  IDEA_DESCRIPTION.md  IMPLEMENTATION_SUMMARY.md  INGESTION_PIPELINE_DESIGN.md  INTELLIGENT_DOCUMENT_STORAGE_PIPELINE.md  MONGODB_ARCHITECTURE_AND_OPTIMIZATION.md  OFFLINE_MIGRATION_GUIDE.md  PERSONALIZED_SUMMARY.md  PRECEDENT_FINDER.md  PRECEDENT_FINDER_INTEGRATION.md  PRECEDENT_FINDER_README.md  PRECEDENT_FINDING_PIPELINE.md  RETRIEVAL_AND_QUERY_CLASSIFICATION.md  RETRIEVAL_QUERY_CLASSIFIER_DESIGN.md  SEARCH_AND_RAG.md  SUMMARY.md  TRIM_REMOVED.md  ToDo.md  check.md
frontend/: LICENSE  (+6 more)
(+146 files in other folders)
